--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -7,29 +7,39 @@
         type="text/javascript"></script>
 <script>
 $(document).ready( function() {
-var w = "{{ type1 }}";
 $('#p' ).click( function() {
 var q = $('#q').val();
 console.log(q);
-console.log(w);
 $.ajax({
     type: "GET",
-    url: "/search2/",
+    url: "/search/",
     dataType: "html",
-    data: {'q': q ,'w':w},
+    data: {'q': q },
     success: function(data) {
                          $('#results').html(data);
 },
 });
 });
-});
 
 
 $("#q").keyup(function(event){
-    if(event.keyCode == 13){
-        $("#p").click();
+    console.log("hi");
+    if(event.key == "Enter"){
+        var q = $('#q').val();
+        console.log(q);
+        $.ajax({
+        type: "GET",
+        url: "/search/",
+        dataType: "html",
+        data: {'q': q },
+        success: function(data) {
+                         $('#results').html(data);
+},
+});
     }
 });
+});
+
 </script>
 {% endblock %}
 {% block content%}
