--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -11,9 +11,10 @@ var w = "{{ type1 }}";
 $('#p' ).click( function() {
 var q = $('#q').val();
 console.log(q);
+console.log(w);
 $.ajax({
     type: "GET",
-    url: "/search/",
+    url: "/search2/",
     dataType: "html",
     data: {'q': q ,'w':w},
     success: function(data) {
@@ -27,9 +28,10 @@ $("#q").keyup(function(event){
     if(event.key == "Enter"){
         var q = $('#q').val();
         console.log(q);
+        console.log(w);
         $.ajax({
         type: "GET",
-        url: "/search/",
+        url: "/search2/",
         dataType: "html",
         data: {'q': q ,'w':w},
         success: function(data) {
